--- a/committee.html
+++ b/committee.html
@@ -206,6 +206,15 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/95487297" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-PFK55KQJVR"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-PFK55KQJVR');
+</script>
           
             <script>
               $('.header_burger').on('click', function(e){
