--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     crossorigin="anonymous">
   </script>
 
-    <title>matebal</title>
+    <title>Главная</title>
   </head>
   <body>
     <header>
